--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
       <p class="ex1">
         <pre id="Introduction">
          Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising 
-         prevalence and life-threatening complications. <a href="#Kornej2020">(Kornej et al., 2020). </a> AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
-         with high risks of ischemic strokes and myocardial infarction <a href="Nemati2016">(Nemati et al., 2016). </a> Traditionally, electrocardiogram (ECG) monitoring systems are used to 
+         prevalence and life-threatening complications. <a href="#Kornej2020">(Kornej et al., 2020) </a> AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
+         with high risks of ischemic strokes and myocardial infarction <a href="#Nemati2016">(Nemati et al., 2016). </a> Traditionally, electrocardiogram (ECG) monitoring systems are used to 
          detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers
-         patients and healthcare providers <a href="Duncker2021">(Duncker et al., 2021).</a> Despite their transformative potential, integrating wearable technology and AI into healthcare
+         patients and healthcare providers <a href="#Duncker2021">(Duncker et al., 2021).</a> Despite their transformative potential, integrating wearable technology and AI into healthcare
          raises critical ethical concerns. This essay explores the extent of how which algorithmic bias, informed consent, and autonomy in the use of data and
          data security impact the adoption of wearable technology into healthcare.
         </pre>
@@ -102,7 +102,7 @@
          Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
          products being advertised as suitable for all skin tones, they still exhibit bias and discrimination against individuals with darker skin tones.
          This hinders the integrity of wearable devices as it reinforces racial disparities by not being accessible and accurate to all. 
-         <a href="Colvonen2020">(Colvonen et al. (2020),</a><a href="MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
+         <a href="#Colvonen2020">(Colvonen et al. (2020),</a><a href="#MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
          should aim to improve healthcare access rather than exacerbate existing healthcare disparities.
          
           Bridge deck repair durability is the subject of much recent research as in
@@ -112,15 +112,15 @@
       <p class="ex1">
        <pre id="Autonomy_and_informed_consent">
         Wearable technology collects a myriad of psychological data which makes informed consent crucial to protect user autonomy. Exercise is a critical 
-        determinant  of health and lack of physical activity can contribute to morbidity and mortality associated with AF (Semaan et al., 2020).  Patients can 
-        utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a               
+        determinant  of health and lack of physical activity can contribute to morbidity and mortality associated with AF <a href="#Semaan2020">(Semaan et al., 2020).</a>
+        Patients can utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a               
         healthier lifestyle. This aligns with the principle of the quantified self, where users feel empowered to take an active role in their own health management,   
         and their autonomy is not limited. Promoting self-efficacy in this way supports a sustainable and innovative approach to healthcare: transitioning
         medical management from the clinic to the home. This means that data collected by wearable devices can be used by both the patient and clinician to 
         monitor health conditions and implement personalised interventions (Figure 1). The clinician treating the patient must strictly adhere to 
-        confidentiality protocols so that they don't commit medical malpractice and violate HIPAA (Rose, Kumar and Kass, 2023). 
+        confidentiality protocols so that they don't commit medical malpractice and violate HIPAA <a href="#Rose2023">(Rose, Kumar and Kass, 2023). </a>
         Following this provides an innovative, cost-effective solution as it results in less outpatient visits for monitoring and patient empowerment as 
-        patients are more engaged with improving their health. <a href="Duncker,2021">(Duncker et al., 2021b)</a>
+        patients are more engaged with improving their health. <a href="#Duncker,2021">(Duncker et al., 2021b)</a>
         <a href="AdasuriyaandHaldar2022">Figure 1 (Adasuriya and Haldar, 2022)</a>
        </pre>
        <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="600">
@@ -135,13 +135,13 @@
        <pre id="Privacy_and_Data_Security">
         The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy. Health data 
         is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted
-        advertising, unlawful service acquisition and identity theft <a href="Cilliers,2019">(Cilliers, 2019,</a><a href="Mone2023"> Mone and Shakhlo, 2023).</a>
+        advertising, unlawful service acquisition and identity theft <a href="#Cilliers,2019">(Cilliers, 2019,</a><a href="Mone2023"> Mone and Shakhlo, 2023).</a>
         Users may be unaware of the extent of data being collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
         Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can 
-        tamper with the content of exchanged data packets or alter the timestamp of them <a href="Cilliers2019">(Cilliers, 2019).</a> The absence of stringent security protocols and
+        tamper with the content of exchanged data packets or alter the timestamp of them <a href="#Cilliers2019">(Cilliers, 2019).</a> The absence of stringent security protocols and
         encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or 
         more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in Figure 2 (note data is 
-        incomplete for 2023)<a href="Mone2023">  (Mone and Shakhlo, 2023) </a>      
+        incomplete for 2023)<a href="#Mone2023">  (Mone and Shakhlo, 2023) </a>      
        </pre>
       </p>
 
