--- a/index.html
+++ b/index.html
@@ -105,8 +105,6 @@
          <a href="#Colvonen2020">(Colvonen et al. (2020),</a><a href="#MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
          should aim to improve healthcare access rather than exacerbate existing healthcare disparities.
          
-          Bridge deck repair durability is the subject of much recent research as in
-          <a href=”https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034”>Toshihiko et al (2023).</a> Table 1: Data on cost and lifespan of bridge repairs
         </pre>
      <h3 id="Autonomy_and_infomed_consent"> Autonomy and infomed consent </h3>
       <p class="ex1">
@@ -121,7 +119,7 @@
         confidentiality protocols so that they don't commit medical malpractice and violate HIPAA <a href="#Rose2023">(Rose, Kumar and Kass, 2023). </a>
         Following this provides an innovative, cost-effective solution as it results in less outpatient visits for monitoring and patient empowerment as 
         patients are more engaged with improving their health. <a href="#Duncker,2021">(Duncker et al., 2021b)</a>
-        <a href="AdasuriyaandHaldar2022">Figure 1 (Adasuriya and Haldar, 2022)</a>
+        <a href="#AdasuriyaandHaldar2022">Figure 1 (Adasuriya and Haldar, 2022)</a>
        </pre>
        <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="600">
        <pre>
@@ -135,13 +133,13 @@
        <pre id="Privacy_and_Data_Security">
         The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy. Health data 
         is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted
-        advertising, unlawful service acquisition and identity theft <a href="#Cilliers,2019">(Cilliers, 2019,</a><a href="Mone2023"> Mone and Shakhlo, 2023).</a>
+        advertising, unlawful service acquisition and identity theft <a href="#Cilliers,2019">(Cilliers, 2019)</a>,<a href="#Mone2023"> Mone and Shakhlo, 2023)</a>
         Users may be unaware of the extent of data being collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
         Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can 
-        tamper with the content of exchanged data packets or alter the timestamp of them <a href="#Cilliers2019">(Cilliers, 2019).</a> The absence of stringent security protocols and
+        tamper with the content of exchanged data packets or alter the timestamp of them <a href="#Cilliers2019">(Cilliers, 2019)</a> The absence of stringent security protocols and
         encryption for data transmission and storage leaves users vulnerable to cyber-attacks and data breaches. Healthcare breaches "affecting 500 people or 
-        more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in Figure 2 (note data is 
-        incomplete for 2023)<a href="#Mone2023">  (Mone and Shakhlo, 2023) </a>      
+        more were reported to the US Office for Civil Rights of the Department of Health and Human Services (HHS)", as shown in the table below (note: data is 
+        incomplete for 2023)<a href="#Mone2023">(Mone and Shakhlo, 2023)</a>      
        </pre>
       </p>
 
