--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
          products being advertised as suitable for all skin tones, they still exhibit bias and discrimination against individuals with darker skin tones.
          This hinders the integrity of wearable devices as it reinforces racial disparities by not being accessible and accurate to all. 
-         <a href="#Colvonen2020">(Colvonen et al. (2020),</a><a href="#MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
+         <a href="#Colvonen2020">(Colvonen et al. (2020)</a>,<a href="#MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
          should aim to improve healthcare access rather than exacerbate existing healthcare disparities.
          
         </pre>
@@ -118,8 +118,8 @@
         monitor health conditions and implement personalised interventions (Figure 1). The clinician treating the patient must strictly adhere to 
         confidentiality protocols so that they don't commit medical malpractice and violate HIPAA <a href="#Rose2023">(Rose, Kumar and Kass, 2023). </a>
         Following this provides an innovative, cost-effective solution as it results in less outpatient visits for monitoring and patient empowerment as 
-        patients are more engaged with improving their health. <a href="#Duncker,2021">(Duncker et al., 2021b)</a>
-        <a href="#AdasuriyaandHaldar2022">Figure 1 (Adasuriya and Haldar, 2022)</a>
+        patients are more engaged with improving their health. <a href="#Duncker2021">(Duncker et al., 2021b)</a> Figure 1
+        <a href="#AdasuriyaandHaldar2022">(Adasuriya and Haldar, 2022)</a>
        </pre>
        <img src="Figure1.png" alt="Figure 1 (Adasuriya and Haldar, 2022)" width="1200" height="600">
        <pre>
@@ -133,7 +133,7 @@
        <pre id="Privacy_and_Data_Security">
         The pervasiveness of data collection through wearable devices has led to concerns regarding the security of data and loss of privacy. Health data 
         is considered the most sensitive category of personal information. Its growing commercial value has led to misuse for purposes such as targeted
-        advertising, unlawful service acquisition and identity theft <a href="#Cilliers,2019">(Cilliers, 2019)</a>,<a href="#Mone2023"> Mone and Shakhlo, 2023)</a>
+        advertising, unlawful service acquisition and identity theft <a href="#Cilliers2019">(Cilliers, 2019)</a>,<a href="#Mone2023"> Mone and Shakhlo, 2023)</a>
         Users may be unaware of the extent of data being collected, stored and shared. This is because privacy policies are lengthy, complex and profuse, that conceal details of data collection and usage.   
         Furthermore, data transmission of wearable devices compromises of wireless or Bluetooth technologies which are prone to modification as hackers can 
         tamper with the content of exchanged data packets or alter the timestamp of them <a href="#Cilliers2019">(Cilliers, 2019)</a> The absence of stringent security protocols and
