--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          Green light is less able to penetrate deeper into the skin of individuals with darker pigmentation, leading to less accurate readings. Despite
          products being advertised as suitable for all skin tones, they still exhibit bias and discrimination against individuals with darker skin tones.
          This hinders the integrity of wearable devices as it reinforces racial disparities by not being accessible and accurate to all. 
-         <a href="#Colvonen2020">(Colvonen et al. (2020)</a>,<a href="#MeridandVope2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
+         <a href="#Colvonen2020">(Colvonen et al. (2020)</a>,<a href="#MeridandVolpe2023">(Merid and Volpe, 2023)).</a> Crucially, this represents an ethical violation, as advances in wearable technology 
          should aim to improve healthcare access rather than exacerbate existing healthcare disparities.
          
         </pre>
@@ -256,7 +256,7 @@
            'Smart Wearables for Cardiac Monitoring—Real-World Use beyond Atrial Fibrillation,' Sensors, 21(7), p. 2539.
            [DOI: <a href="https://doi.org/10.3390/s21072539">10.3390/s21072539</a>].
        </li>
-       <li id="AdasuriyaandHaldar2022)">
+       <li id="AdasuriyaandHaldar2022">
            Adasuriya and Haldar,2022
           'Remote monitoring of cardiac arrhythmias using wearable digital technology: paradigm shift or pipe dream?,
           ' European Journal of Arrhythmia & Electrophysiology, 8(1), p. 7. V
