--- a/index.html
+++ b/index.html
@@ -226,11 +226,11 @@
         data protection mechanisms should be in place to harness the full potential of wearable technology.      
        </pre>
       </p>
-
-      <video controls>
-       <source scr="ENG0018Presentation-2.mp4" type="video/mp4"> Your browser does not support the video tag
-      //<video scr="ENG0018Presentation-2.mp4" width="800" height="450" controls>
-      </video>
+     <video width="640" height="360" controls>
+       <source src="ENG0018Presentation-2.mp4" type="video/mp4">
+     Your browser does not support the video tag.
+     </video>
+      
       <h3 id="References">References</h3>
       <p>
        <pre>
