--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
  
   <head>
     <img src ="NEW UoS Logo BLUE.svg" alt="Banner" width="900" height="300">
-     <script type=”text/javascript” src=https://www.gstatic.com/charts/loader.js></script>
+     <script type="text/javascript" src=https://www.gstatic.com/charts/loader.js></script>
      <h1><b> ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2> Student URN: 6864556 </h2>
       <hr>
