--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
     <video controls="" width="640" height="360" muted ="" loop="" autoplay="">
     <source scr="https://github.com/FEPSFY6864555/FY6864555/blob/main/%20ENG0018Presentation-2.mp4 type="video/mp4">
     </video>
-     <meta meta="viewport" content="width=device-width,inital-scale=1">
+     <meta name="viewport" content="width=device-width,inital-scale=1">
       <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
       <style>
         .mySlides {display:none;}
