--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
 
  <hr>
   <h2 id="Presentation" style="fond-family:calibri;"><b>Presentation: </b></h2>
-  <video scr="ENG0018Presentation-2.mp4" video="800" height="450" controls>
+  <video src="ENG0018Presentation-2.mp4" video="800" height="450" controls>
   </video>
     
  
@@ -355,7 +355,7 @@
 <script>
     async function getLastUpdatedTime() {
         const username = 'FEPSFY6864555';
-        const repo = 'FEPSFY6864555';
+        const repo = 'FY6864555';
        
         const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
