--- a/index.html
+++ b/index.html
@@ -120,75 +120,9 @@
         incomplete for 2023)<a href="#Mone2023">(Mone and Shakhlo, 2023)</a>      
        </pre>
       </p>
-
+     <h4 id="References">Figure 2 </h3>
      
-     <table>
-        <tr>
-          <th>Year </th>
-          <th>Healthcare Date Breaches of 500 or more records </th>
-        </tr>
-        <tr>
-          <td>2009</td>
-          <td>18</td>
-        </tr>
-        <tr>
-          <td>2010 </td>
-          <td>199</td>
-        </tr>
-        <tr>
-          <td>2011</td>
-          <td>200</td>
-        </tr>
-        <tr>
-          <td> 2012 </td>
-          <td>218 </td>
-        </tr>
-        <tr>
-          <td>2013 </td>
-          <td>277 </td>
-        </tr>
-       <tr>
-          <td>2014 </td>
-          <td> 314 </td>
-       </tr>
-       <tr>
-          <td>2015 </td>
-          <td>270 </td>
-       </tr>
-       <tr>
-          <td>2016 </td>
-          <td>329 </td>
-       </tr> 
-       <tr>
-          <td>2017 </td>
-          <td>358 </td>
-       </tr> 
-        <tr>
-          <td>2018 </td>
-          <td> 369 </td>
-       </tr> 
-       <tr>
-          <td>2019 </td>
-          <td> 512 </td>
-       </tr> 
-        <tr>
-          <td> 2020 </td>
-          <td>663 </td>
-       </tr> 
-          <tr>
-          <td>2021 </td>
-          <td>715 </td>
-       </tr> 
-        <tr>
-          <td> 2022 </td>
-          <td>707 </td>
-       </tr> 
-        <tr>
-          <td>2023 </td>
-          <td>40 </td>
-       </tr>       
-     </table>
-     <p>
+     
       <pre class="ex1">
       <pre id="Paragraph3_InText">
        Pivotally, data integrity being compromised presents a major ethical concern as for patients that use wearable devices for monitoring of AF and for their 
