--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
      </style>     
   <h5 id="References"> Figure 2. Reported large-scale healthcare data breaches (500+ individuals) in the United States, illustrating ongoing risks to sensitive medical information.
       Adapted from Mone and Shakhlo (2023). Note: 2023 data is incomplete.  </h3>
-       <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js">
   <script type="text/javascript">
     google.charts.load("current", {packages:['corechart']});
     google.charts.setOnLoadCallback(drawChart);
