--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
          prevalence and life-threatening complications. <a href="#Kornej2020">(Kornej et al., 2020) </a> AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic 
          with high risks of ischemic strokes and myocardial infarction <a href="#Nemati2016">(Nemati et al., 2016). </a> Traditionally, electrocardiogram (ECG) monitoring systems are used to 
          detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers
-         patients and healthcare providers <a href="#Duncker2021">(Duncker et al., 2021).</a> Despite their transformative potential, integrating wearable technology and AI into healthcare
+         patients and healthcare providers <a href="#Duncker2021">(Duncker et al., 2021).</a> 
+         Despite their transformative potential, integrating wearable technology and AI into healthcare
          raises critical ethical concerns. This essay explores the extent of how which algorithmic bias, informed consent, and autonomy in the use of data and
          data security impact the adoption of wearable technology into healthcare.
       </pre>
