--- a/index.html
+++ b/index.html
@@ -47,7 +47,6 @@
 
     </style>
 
-
       <h1><b>ENG0018 Computer Laboratory 2024/25</b></h1>
       <h2>Student URN: 6864555</h2>
     <hr>
@@ -281,11 +280,13 @@ Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with signi
 <br>
 <br>
   
+<!--- presentation --->
+
   <p class="ex1">
     <hr>
     <h3 id="Presentation">Presentation: Ethical considerations in the integration of wearable technology and AI in healthcare</h3>
   </p>
-<video src="ENG0018Presentation-2.mp4" video="800" height="450" controls>
+<video src="ENG0018Presentation-2.mp4" width="800" height="450" controls>
   </video>
     
  
