--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
   <head>
-    <img src="WebBanner2023.png" alt="Banner" width="1200" height="300">
+    <img src="NEW UoS Logo BLUE.svg" alt="Banner" width="1200" height="300">
     <!-- styling for webpage --> 
     <style>
     body {
