--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
   <head>
-    <img src="NEW UoS Logo BLUE.svg" alt="Banner" width="1200" height="300">
+    <img src="NEW UoS Logo BLUE.svg" alt="Banner" width="900" height="300">
     <!-- styling for webpage --> 
     <style>
     body {
@@ -286,7 +286,7 @@ Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with signi
     <hr>
     <h3 id="Presentation">Presentation: Ethical considerations in the integration of wearable technology and AI in healthcare</h3>
   </p>
-<video src="ENG0018Presentation-2.mp4" width="800" height="450" controls>
+<video src="Larissa.Cortez.Computer&DataScience.mp4" width="800" height="450" controls>
   </video>
     
  
