--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@ Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with signi
 </script>
 
 
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
+<!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Word count function ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 <!-- Placeholder for total word count -->
@@ -350,7 +350,7 @@ Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with signi
 <script>
   // Function to calculate and display word count for a specified section
   function displayWordCount(sectionId, outputId) {
-// Get the text content from the specified section
+    // Get the text content from the specified section
     const text = document.getElementById(sectionId).textContent;
     // Split text into words based on spaces and filter out any empty strings
     const wordArray = text.trim().split(/\s+/);
@@ -363,16 +363,10 @@ Atrial fibrillation (AF) is a prevalent cardiac arrhythmia associated with signi
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
     const IntroductionCount = displayWordCount("IntroInText");
-    //const AbstractCount = displayWordCount("Abstract");
-    // const Paragraph1Count = displayWordCount("Paragraph1_InText");
-    // const Paragraph2Count = displayWordCount("Paragraph2_InText");
-    // const Paragraph3Count = displayWordCount("Paragraph3_InText");
-    // const ConclusionCount = displayWordCount("Conclusion_InText");   
-    // Calculate the sum of all selected sections 
-    const totalWordCount = IntroductionCount ;
-    // +  Paragraph1Count + Paragraph2Count + Paragraph3Count + ConclusionCount
+    // const AnalysisCount = displayWordCount("Analysis_InText");
+    // Calculate the sum of all selected sections
+    const totalWordCount = IntroductionCount;
     // Display the total word count
-    //document.getElementById("AbstractCount").innerText = 'Abstract word count: ${AbstractCount}';
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
   // Run the function for specific sections and display total count when the page loads
