--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <h3 id="Autonomy and Informed Consent">Autonomy and Informed Consent</h3>
     <p class="ex1">Wearable technology collects a myriad of psychological data which makes informed consent crucial to protect user autonomy. Exercise is a critical determinant of health and lack of physical activity can contribute to morbidity and mortality associated with AF <a href="#Semaan2020">(Semaan et al., 2020)</a>. Patients can utilise wearable devices to monitor psychological parameters such as level of physical activity and heart rate to encourage behavioural change towards a healthier lifestyle. This aligns with the principle of the quantified self, where users feel empowered to take an active role in their own health management, and their autonomy is not limited. Promoting self-efficacy in this way supports a sustainable and innovative approach to healthcare: transitioning medical management from the clinic to the home. This means that data collected by wearable devices can be used by both the patient and clinician to monitor health conditions and implement personalised interventions, as shown in Figure 1. The clinician treating the patient must strictly adhere to confidentiality protocols so that they do not commit medical malpractice and violate HIPAA <a href="#Rose2023">(Rose, Kumar and Kass, 2023)</a>. Following this provides an innovative, cost-effective solution as it results in less outpatient visits for monitoring and patient empowerment as patients are more engaged with improving their health <a href="#Duncker2021">(Duncker et al., 2021)</a>.</p>
 
-    <p class="ex1"><b>Figure 1.</b> Proposed framework for remote cardiac monitoring using wearable technology to support patient autonomy and enable personalised interventions. <a href="#AdasuriyaandHaldar2022">(Adasuriya and Haldar, 2022)</a>.<br><img src="Figure1.png" style="margin: 20px 20px 20px 20px;" alt="Figure1" width="564" height="440"></p>
+    <b>Figure 1.</b> Proposed framework for remote cardiac monitoring using wearable technology to support patient autonomy and enable personalised interventions. <a href="#AdasuriyaandHaldar2022">(Adasuriya and Haldar, 2022)</a>.<br><img src="Figure1.png" style="margin: 20px 20px 20px 20px;" alt="Figure1" width="564" height="440"></p>
 
     <p class="ex1">For the patient autonomy to not be undermined, it is crucial that there is transparency, with the patient fully aware of the data that is shared with the clinician. By placing informed consent at the forefront of remote monitoring, wearable technology exemplifies a shift towards patient-centered healthcare that prioritises autonomy and engagement.</p>
 
@@ -228,7 +228,7 @@
     <hr>
     <h3 id="Presentation">Presentation: Ethical considerations in the integration of wearable technology and AI in healthcare</h3>
   </p>
-<video src="Larissa.Cortez.Computer&DataScience.mp4" video="800" height="450" controls>
+<video src="ENG0018Presentation-2.mp4" video="800" height="450" controls>
   </video>
     
  
@@ -280,7 +280,7 @@
     // Initial load to display the time on page load
     window.onload = getLastUpdatedTime;
 </script>
-<!-- Word Count Display -->
+ <!-- Word Count Display -->
   <p id="totalWordCount"></p>
   <hr>
 
