--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
 <br>
 <br>
     <a id="#Rose2023"></a>
-      <b>Rose, R.V., Kumar, A. and Kass, J.S. (2023) </b> ‘Protecting privacy’,<i> Neurologic Clinics</i>pp.513–522. Available at:  
+      <b>Rose, R.V., Kumar, A. and Kass, J.S. (2023) </b> ‘Protecting privacy’,<i> Neurologic Clinics</i>, pp.513–522. Available at:  
       <a href="https://doi.org/10.1016/j.ncl.2023.03.007">(Rose, Kumar and Kass, 2023) </a>. 
       (Accessed: 4 August 2025)
 <br>
@@ -228,7 +228,7 @@
     <hr>
     <h3 id="Presentation">Presentation: Ethical considerations in the integration of wearable technology and AI in healthcare</h3>
   </p>
-<video src="ENG0018Presentation-2.mp4" video="800" height="450" controls>
+<video src="Larissa.Cortez.Computer&DataScience.mp4" video="800" height="450" controls>
   </video>
     
  
