--- a/index.html
+++ b/index.html
@@ -77,9 +77,8 @@
   <hr>
 
   <!-- Start of word-counted content -->
-  <div id="countedContent">
     <h3 id="Introduction">Introduction</h3>
-    <p class="ex1">Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising prevalence and life-threatening complications <a href="#Kornej2020">(Kornej et al., 2020)</a>. AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic, with high risks of ischemic strokes and myocardial infarction <a href="#Nemati2016">(Nemati et al., 2016)</a>. Traditionally, electrocardiogram (ECG) monitoring systems are used to detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers patients and healthcare providers <a href="#Duncker2021">(Duncker et al., 2021)</a>.</p>
+    <p  id="countedContent" class="ex1">Wearable technology provides innovative and cost-effective solutions for detecting AF, which is recognised as a global health challenge due to its rising prevalence and life-threatening complications <a href="#Kornej2020">(Kornej et al., 2020)</a>. AF is a type of cardiac arrhythmia that is difficult to detect and often asymptomatic, with high risks of ischemic strokes and myocardial infarction <a href="#Nemati2016">(Nemati et al., 2016)</a>. Traditionally, electrocardiogram (ECG) monitoring systems are used to detect arrhythmias. The use of this is limited to the duration of the appointment, whereas wearable devices enable continuous monitoring that empowers patients and healthcare providers <a href="#Duncker2021">(Duncker et al., 2021)</a>.</p>
 
     <p class="ex1">Despite their transformative potential, integrating wearable technology and AI into healthcare raises critical ethical concerns. This essay examines the extent to which algorithmic bias, informed consent, and autonomy in the use of data and data security influence the adoption of wearable technology in healthcare.</p>
 
@@ -98,7 +97,7 @@
 
     <!--- Bar chart for figure 2-->  
   <b>Figure 2. </b> Reported large-scale healthcare data breaches (500+ individuals) in the United States, illustrating ongoing risks to sensitive medical information. Adapted from
-  <a href="#Mone2023">(Mone and Shakhlo, 2023)</a> <i>Note: 2023 data is incomplete. </i> 
+  <a href="#Mone2023">(Mone and Shakhlo, 2023)</a> <i> Note: 2023 data is incomplete. </i> 
 </p>  
 
 <div id="columnchart_values" style="width: 850px; height: 300px;"></div>
