--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <b>Figure 2. </b> Reported large-scale healthcare data breaches (500+ individuals) in the United States, illustrating ongoing risks to sensitive medical information. Adapted from
   <a href="#Mone2023">(Mone and Shakhlo, 2023)</a> <i> Note: 2023 data is incomplete. </i> 
 </p>  
-
+<p id="countedContent9">
 <div id="columnchart_values" style="width: 850px; height: 300px;"></div>
 <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript">
@@ -143,10 +143,9 @@
       var chart = new google.visualization.ColumnChart(document.getElementById("columnchart_values"));
       chart.draw(view, options);
   }
+  </p> 
   </script>
 
-
-    <div id="columnchart_values" style="width: 850px; height: 300px;"></div>
     
     <p id="countedContent7" class="ex1">Pivotally, data integrity being compromised presents a major ethical concern for patients who use wearable devices for monitoring of AF and for their overall health. This is because their health is dependent on the security and accuracy of data, and therefore breaches of privacy and misuse of information could deter their adoption and undermine the benefits of this technology.</p>
 
